--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,28 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
   min-width: 350px;
+}
+
+ul {
+  list-style: none;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  height: 100vh;
+  padding: 0 40px;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    padding: 0 35px;
+  }
 }
