--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,13 @@ input {
   background-color: #00a82d;
   border: none;
   color: #FFFFFF;
+  font-size: 16px;
+  transition: .2s all ease-in;
+}
+
+.registerLoginInputBtnStyle:hover {
+  cursor: pointer;
+  background-color: #008624;
 }
 
 .registerLoginContent3 {
