--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -1,3 +1,9 @@
+.cardFlex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .cardComponent {
   border: 1px solid #00a82d;
   border-radius: 7px;
@@ -5,7 +11,6 @@
   max-width: 400px;
   min-height: 40px;
   max-height: 70px;
-  padding: 10px;
   color: #00a82d;
   transition: .2s all ease;
   word-break: break-all;
@@ -13,4 +18,12 @@
 
 .cardComponent:hover {
   box-shadow: 1px 1px 8px 1px rgba(0, 168, 45, 0.6);
+}
+
+@media screen and (max-width: 600px) {
+  .cardComponent {
+    height: 30px;
+    min-height: 30px;
+    font-size: 14px;
+  }
 }
