--- a/frontend/src/pages/Search/index.css
+++ b/frontend/src/pages/Search/index.css
@@ -1,9 +1,9 @@
-.searchContent {
-  width: 100%;
+.searchArticle {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 40px;
-  flex-wrap: wrap;
-  gap: 1em;
+  width: 100%;
+  max-width: 976px;
+  gap: 3em;
 }
