--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -95,6 +95,11 @@ input {
   font-size: 14px;
 }
 
+.registerLoginMessageGreen {
+  color: #00a82d;;
+  font-size: 14px;
+}
+
 .registerLoginContent3 {
   display: flex;
   flex-direction: column;
