--- a/frontend/src/pages/Home/index.css
+++ b/frontend/src/pages/Home/index.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 .homeSection1, .homeSection2 {
@@ -119,6 +120,14 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 1em;
+}
+
+.mainMessage {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  max-height: 300px;
+  padding: 0 10px;
 }
 
 @media screen and (max-width: 833px) {
