--- a/frontend/src/components/MessageCard/index.css
+++ b/frontend/src/components/MessageCard/index.css
@@ -16,6 +16,7 @@
   border: 1px solid #008224;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  transition: all .2s ease-in;
 }
 
 .messageCardTitle {
@@ -23,16 +24,21 @@
   justify-content: center;
   align-items: center;
   background-color: #008224;
-  
+  gap: 1em;
   height: 30px;
   cursor: pointer;
 }
 
 .messageCardTitle > h2 {
   color: #FFFFFF;
-  font-size: 18px;
-  font-weight: 100;
+  font-size: 14px;
+  font-weight: 500;
   letter-spacing: .2em;
+}
+
+.messageCardTitle > p {
+  color: #FFFFFF;
+  font-size: 12px;
 }
 
 .mContainer {
@@ -42,10 +48,12 @@
   gap: 1em;
   flex-direction: column;
   justify-content: space-between;
+  transition: all 1s ease;
 }
 
 .mContainerHidden {
   display: none;
+  transition: all 1s ease;
 }
 
 .messagesContent {
@@ -70,6 +78,7 @@
 .messagesInput > input {
   flex: .9;
   border: 1px solid rgba(107, 107, 107, 0.8);
+  word-wrap: break-word;
   border-radius: 5px;
   font-size: 12px;
   padding-left: 10px;
@@ -83,4 +92,58 @@
   color: #FFFFFF;
   font-weight: bold;
   cursor: pointer;
+}
+
+.messageUserEmail {
+  font-size: 10px;
+  width: 100%;
+  border-bottom: 1px solid rgb(199, 198, 198, 60%);
+  padding: 0 10px;
+  padding-bottom: 5px;
+}
+
+.dataMessage {
+  padding: 0 10px;
+}
+
+.send {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.balloon {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  background-color: #008224;
+  border-radius: 5px;
+  text-align: justify;
+  word-break: break-all;
+  height: min-content;
+  max-width: 85%;
+  padding: 10px 0;
+  color: #FFFFFF;
+}
+
+.receive {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+@media screen and (max-width: 983px) {
+  .messageCardContainer {
+    width: 400px;
+    height: 200px;
+    max-width: 300px;
+    max-height: 200px;
+    margin-top: 50px;
+  }
+
+  .mContainer {
+    height: 169px;
+    padding: 5px;
+  }
+  
 }
